User impact: add missing icon label for close button in ScoreCard component
Also make icon mocks truthy in tests so they are rendered and add
missing test case to render the popover content in the ScoreCard test.
Mocking the icons to empty strings may cause some components to not
render them if there's a v-if check. Only taking action in the
cdxCloseIcon in this patch.

Bug: T326233
Change-Id: I88cbbb7228c373ad0873298949ce25318e18a3dc

--- a/i18n/extension/qqq.json
+++ b/i18n/extension/qqq.json
@@ -95,5 +95,6 @@
 	"growthexperiments-edit-config-newcomer-tasks-infobox-templates": "Description of the infobox templates form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-newcomer-tasks-infobox-templates-help": "Help text for infobox templates form field in Special:EditGrowthConfig\n\n{{doc-growthexperiments-community-configuration}}",
 	"growthexperiments-edit-config-delayed": "Help text for Special:EditGrowthConfig fields for which changes have a delayed effect due to caching or similar.\n\n{{doc-growthexperiments-community-configuration}}",
+	"growthexperiments-info-tooltip-close-label": "Accessibility label text for the close button in informational tooltips of the GrowthExperiments extension.\n\n{{doc-growthexperiments-homepage}}",
 	"specialpages-group-growth-tools": "{{doc-special-group|that=Provide tools for newcomers|like=[[Special:ClaimMentee]], [[Special:Homepage]], [[Special:MentorDashboard]], etc}}"
 }
