--- a/i18n/help/en.json
+++ b/i18n/help/en.json
@@ -28,12 +28,12 @@
 	"growthexperiments-help-panel-postedit-subheader-notsaved": "Next suggestion:",
 	"growthexperiments-help-panel-postedit-footer": "View all suggested edits",
 	"growthexperiments-help-panel-postedit-suggestededits-info": "Other users of {{SITENAME}} have found articles that need work. Continue {{GENDER:|your}} editing by browsing these suggested edits.",
-	"growthexperiments-help-panel-postedit-trynewtask-toast-message": "DRAFT: Congratulations on publishing another suggested edit!",
-	"growthexperiments-help-panel-postedit-trynewtask-try-button-text": "DRAFT: Try new task",
-	"growthexperiments-help-panel-postedit-trynewtask-nothanks-button-text": "DRAFT: No thanks",
-	"growthexperiments-help-panel-postedit-trynewtask-header": "DRAFT: Increase your skill level by trying a new type of edit",
-	"growthexperiments-help-panel-postedit-trynewtask-subheader-tasktype": "DRAFT: Thanks for your contribution. Try a new edit type: <strong>$1</strong>",
-	"growthexperiments-help-panel-postedit-trynewtask-dontshowagain-checkbox": "DRAFT: Don't show this again",
+	"growthexperiments-help-panel-postedit-trynewtask-toast-message": "Congratulations on publishing another suggested edit!",
+	"growthexperiments-help-panel-postedit-trynewtask-try-button-text": "Try new task",
+	"growthexperiments-help-panel-postedit-trynewtask-nothanks-button-text": "No thanks",
+	"growthexperiments-help-panel-postedit-trynewtask-header": "Increase {{GENDER:|your}} skill level by trying a new type of edit",
+	"growthexperiments-help-panel-postedit-trynewtask-subheader-tasktype": "Thanks for {{GENDER:|your}} contribution. Try a new edit type: <strong>$1</strong>",
+	"growthexperiments-help-panel-postedit-trynewtask-dontshowagain-checkbox": "Don't show again",
 	"growthexperiments-help-panel-questionreview-title": "Ask the help desk",
 	"growthexperiments-help-panel-questionreview-title-mentor": "Ask your mentor",
 	"growthexperiments-help-panel-questionreview-header": "When you submit a question, it gets <strong>published publicly</strong> under your username, \"$2\", to the $1, where another volunteer editor will try to provide an answer within the next day or so.",
