Frontend for Personalized praise module
Initial implementation of the frontend. Several things
will have to be added in a follow-up, such as:

* Polishing the styling to match Figma specs
* Add the (i) popup

Bug: T322443
Bug: T322446
Depends-On: I4ee024cc4760542790319f302f42b1b2389ac897
Change-Id: I0ba03ce7b3dffcfd2c17e58753f026e057803492

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -118,6 +118,27 @@
 	"growthexperiments-mentor-dashboard-mentor-tools-message-change-dialog-success": "{{GENDER:|Your}} introduction message was changed to \"$1\".",
 	"growthexperiments-mentor-dashboard-personalized-praise-praise-message-title": "Appreciation on a job well done!",
 	"growthexperiments-mentor-dashboard-personalized-praise-praise-message-message": "Hello $1, this is your mentor. Thank you for your contributions. I see you have been busy editing and I just wanted to take a moment to say thanks and that I hope you'll continue to stay involved! Feel free to drop a message on my talk page if you ever have questions. Cheers!",
+	"growthexperiments-mentor-dashboard-personalized-praise-title": "Send appreciation",
+	"growthexperiments-mentor-dashboard-personalized-praise-intro": "Positive messages from experienced users and mentors may help improve new editor retention.",
+	"growthexperiments-mentor-dashboard-personalized-praise-metrics": "Metric: $1 edits in $2 days. Customise these figures in settings.  ",
+	"growthexperiments-mentor-dashboard-personalized-praise-empty-state-footer": "Appreciation-worthy mentees will be shown here.",
+	"growthexperiments-mentor-dashboard-personalized-praise-talk-topics": "$1 talk topics",
+	"growthexperiments-mentor-dashboard-personalized-praise-page-counter": "$1 of $2 {{PLURAL:$2|mentee|mentees}}",
+	"growthexperiments-mentor-dashboard-personalized-praise-page-previous-icon-label": "Previous page",
+	"growthexperiments-mentor-dashboard-personalized-praise-page-next-icon-label": "Next page",
+	"growthexperiments-mentor-dashboard-personalized-praise-send-appreciation": "Send appreciation",
+	"growthexperiments-mentor-dashboard-personalized-praise-send-appreciation-error-unknown": "Unknown error occurred. Please try again later.",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-cog-icon-label": "Open the settings dialog",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-title": "Settings",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-praiseworthy-metric-headline": "Praise-worthy mentees metric",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-praiseworthy-metric-edits-within-timeframe": "Edits within a time frame",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-positive-message-headline": "Your default positive message",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-positive-message-subject": "Subject",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-positive-message-placeholder": "...",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-notifications-headline": "Notifications",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-notifications-pretext": "{{GENDER:|You}} will be notified when a mentee has been displayed for praise.",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-save": "Save",
+	"growthexperiments-mentor-dashboard-personalized-praise-settings-cancel": "Cancel",
 	"growthexperiments-mentor-list-missing-key": "Key <code>$1</code> is missing",
 	"growthexperiments-mentor-list-datatype-mismatch": "<code>$1</code> is expected to be <code>$2</code>, but is <code>$3</code>",
 	"growthexperiments-mentor-list-unexpected-key-mentor": "Mentor definition contains an unexpected key <code>$1</code>",
