--- a/i18n/help/en.json
+++ b/i18n/help/en.json
@@ -34,6 +34,10 @@
 	"growthexperiments-help-panel-postedit-trynewtask-header": "Increase {{GENDER:|your}} skill level by trying a new type of edit",
 	"growthexperiments-help-panel-postedit-trynewtask-subheader-tasktype": "Thanks for {{GENDER:|your}} contribution. Try a new edit type: <strong>$1</strong>",
 	"growthexperiments-help-panel-postedit-trynewtask-dontshowagain-checkbox": "Don't show again",
+	"growthexperiments-help-panel-postedit-nonsuggested-header": "Try a suggested edit",
+	"growthexperiments-help-panel-postedit-nonsuggested-body": "Suggested edits help new editors learn about {{SITENAME}} best practices, and develop core editing skills.",
+	"growthexperiments-help-panel-postedit-nonsuggested-try-button-text": "Try suggested edits",
+	"growthexperiments-help-panel-postedit-nonsuggested-nothanks-button-text": "No thanks",
 	"growthexperiments-help-panel-questionreview-title": "Ask the help desk",
 	"growthexperiments-help-panel-questionreview-title-mentor": "Ask your mentor",
 	"growthexperiments-help-panel-questionreview-header": "When you submit a question, it gets <strong>published publicly</strong> under your username, \"$2\", to the $1, where another volunteer editor will try to provide an answer within the next day or so.",
