--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -561,5 +561,10 @@
 	"growthexperiments-tour-newimpact-discovery-title": "Updated design",
 	"growthexperiments-tour-newimpact-discovery-description": "More of {{GENDER:|your}} editing activity has been added!",
 	"growthexperiments-tour-newimpact-discovery-response-button-okay": "Got it",
-	"growthexperiments-homepage-newimpact-contributions-link": "View all edits"
+	"growthexperiments-homepage-newimpact-contributions-link": "View all edits",
+	"growthexperiments-levelingup-keepgoing-notification-header": "Keep making suggested edits to develop {{GENDER:$2|your}} editing skills",
+	"growthexperiments-levelingup-keepgoing-notification-body": "{{GENDER:$2|You’ve}} made $3 {{PLURAL:$3|suggested edit|suggested edits}}. Keep going to learn more new skills.",
+	"growthexperiments-levelingup-keepgoing-notification-call-to-action-label": "Make a suggested edit",
+	"echo-category-title-ge-newcomer": "New editor engagement",
+	"echo-pref-tooltip-ge-newcomer": "Notify me about newcomer tasks and other Growth team features designed to improve new editor retention."
 }
