--- a/i18n/homepage/qqq.json
+++ b/i18n/homepage/qqq.json
@@ -582,5 +582,10 @@
 	"growthexperiments-tour-newimpact-discovery-title": "Text to show in title of guided tour introducing new impact module.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-tour-newimpact-discovery-description": "Text to show in description of guided tour introducing new impact module.\n\n{{doc-growthexperiments-homepage}}",
 	"growthexperiments-tour-newimpact-discovery-response-button-okay": "Text for button that closes guided tour.\n\n{{doc-growthexperiments-homepage}}",
-	"growthexperiments-homepage-newimpact-contributions-link": "Text for link to [Special:Contributions] in new impact module.\n\n{{doc-growthexperiments-homepage}}"
+	"growthexperiments-homepage-newimpact-contributions-link": "Text for link to [Special:Contributions] in new impact module.\n\n{{doc-growthexperiments-homepage}}",
+	"growthexperiments-levelingup-keepgoing-notification-header": "Text shown in header of a notification sent to new editors. Parameters:\n\n* $2 - the user's gender.\n\n{{doc-growthexperiments-homepage}}",
+	"growthexperiments-levelingup-keepgoing-notification-body": "Text shown in body of a notification sent to new editors. Parameters:\n\n* $2 - the user's gender.\n* $3 - the user's edit count.\n\n{{doc-growthexperiments-homepage}}",
+	"growthexperiments-levelingup-keepgoing-notification-call-to-action-label": "Text shown in label of primary link in a notification sent to new editors.\n\n{{doc-growthexperiments-homepage}}",
+	"echo-category-title-ge-newcomer": "{{doc-echo-category-title|tooltip=Echo-pref-tooltip-ge-newcomer}}",
+	"echo-pref-tooltip-ge-newcomer": "{{doc-echo-pref-tooltip|title=Echo-category-title-ge-newcomer}}"
 }
