MenteeOverview: Add access to user talk page
Bug: T322750
Change-Id: I0a8fc34ac3d075eab62baf9ee7de7002f7b02526

--- a/i18n/mentorship/en.json
+++ b/i18n/mentorship/en.json
@@ -35,6 +35,7 @@
 	"growthexperiments-mentor-dashboard-mentee-overview-filters-expand-icon-label": "Expand the mentees filters form",
 	"growthexperiments-mentor-dashboard-mentee-overview-filters-collapse-icon-label": "Collapse the mentees filters form",
 	"growthexperiments-mentor-dashboard-mentee-overview-search-placeholder": "Search",
+	"growthexperiments-mentor-dashboard-mentee-overview-talk": "talk",
 	"growthexperiments-mentor-dashboard-mentee-overview-active-ago": "active $1 ago",
 	"growthexperiments-mentor-dashboard-mentee-overview-registered-unknown": "unknown",
 	"growthexperiments-mentor-dashboard-mentee-overview-show-entries": "Show $1",
