i18n: Add messages for post-edit variant
Bug: T324315
Bug: T324177
Change-Id: I00e6eb0b498b57586ad8044e5e4551aa6e16cb95

--- a/i18n/help/en.json
+++ b/i18n/help/en.json
@@ -27,6 +27,9 @@
 	"growthexperiments-help-panel-postedit-subheader": "Edit another suggestion:",
 	"growthexperiments-help-panel-postedit-subheader-notsaved": "Next suggestion:",
 	"growthexperiments-help-panel-postedit-footer": "View all suggested edits",
+	"growthexperiments-help-panel-postedit-suggestededits-levelingup-info": "Change {{GENDER:|your}} topic and task filters on suggested edits for more articles to edit.",
+	"growthexperiments-help-panel-postedit-suggestededits-levelingup-title": "No suggestions based on {{GENDER:|your}} filters",
+	"growthexperiments-help-panel-postedit-suggestededits-title": "Suggested edits",
 	"growthexperiments-help-panel-postedit-suggestededits-info": "Other users of {{SITENAME}} have found articles that need work. Continue {{GENDER:|your}} editing by browsing these suggested edits.",
 	"growthexperiments-help-panel-postedit-trynewtask-toast-message": "Congratulations on publishing another suggested edit!",
 	"growthexperiments-help-panel-postedit-trynewtask-try-button-text": "Try new task",
