--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -562,6 +562,10 @@
 	"growthexperiments-tour-newimpact-discovery-description": "More of {{GENDER:|your}} editing activity has been added!",
 	"growthexperiments-tour-newimpact-discovery-response-button-okay": "Got it",
 	"growthexperiments-homepage-newimpact-contributions-link": "View all edits",
+	"growthexperiments-levelingup-getstarted-notification-header": "Try a suggested edit and start building {{GENDER:$2|your}} editing skills",
+	"growthexperiments-levelingup-getstarted-notification-body": "Suggested edits help new editors learn about {{SITENAME}} best practices, and develop core editing skills. ",
+	"growthexperiments-levelingup-getstarted-notification-call-to-action-label": "Try suggested edits",
+	"growthexperiments-levelingup-getstarted-notification-learnmore-label": "Learn more",
 	"growthexperiments-levelingup-keepgoing-notification-header": "Keep making suggested edits to develop {{GENDER:$2|your}} editing skills",
 	"growthexperiments-levelingup-keepgoing-notification-body": "{{GENDER:$2|You’ve}} made $3 {{PLURAL:$3|suggested edit|suggested edits}}. Keep going to learn more new skills.",
 	"growthexperiments-levelingup-keepgoing-notification-call-to-action-label": "Make a suggested edit",
