Suggested edits: Difficulty filter improvements
Add intro paragraph, replace the fake "create article" checkbox
with normal text.

Bug: T322587
Change-Id: I05722a6d59598d6b6acf9771217e2a606bdc345b

--- a/i18n/homepage/en.json
+++ b/i18n/homepage/en.json
@@ -234,7 +234,6 @@
 	"growthexperiments-homepage-suggestededits-tasktype-label-links": "Add links between articles",
 	"growthexperiments-homepage-suggestededits-tasktype-label-link-recommendation": "Add links between articles",
 	"growthexperiments-homepage-suggestededits-tasktype-label-image-recommendation": "Add a suggested image",
-	"growthexperiments-homepage-suggestededits-tasktype-label-create": "Create a new article",
 	"growthexperiments-homepage-suggestededits-tasktype-learn-more": "Learn more",
 	"growthexperiments-homepage-suggestededits-tasktype-time-links": "3 - 5 minutes",
 	"growthexperiments-homepage-suggestededits-tasktype-time-copyedit": "5 - 10 minutes",
@@ -252,6 +251,9 @@
 	"growthexperiments-homepage-suggestededits-difficulty-indicator-label-medium": "Medium",
 	"growthexperiments-homepage-suggestededits-difficulty-indicator-label-hard": "Hard",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-title": "Select types of edits",
+	"growthexperiments-homepage-suggestededits-difficulty-filters-intro": "Suggested edits are designed to help {{GENDER:|you}} learn to edit and become more skilled as you work on larger types of edits.",
+	"growthexperiments-homepage-suggestededits-difficulty-filters-create-title": "Want to create a new article?",
+	"growthexperiments-homepage-suggestededits-difficulty-filters-create-body": "{{SITENAME}} editors recommend that {{GENDER:|you}} try a few medium and hard tasks first before attempting a new article. [$1 Learn more] about writing a new missing article.",
 	"growthexperiments-homepage-suggestededits-topic-filters-title": "Select topics",
 	"growthexperiments-homepage-suggestededits-difficulty-filters-close": "Done",
 	"growthexperiments-homepage-suggestededits-topic-filters-close": "Done",
@@ -325,7 +327,6 @@
 	"growthexperiments-homepage-suggestededits-config-invalidtemplatetitle": "Invalid suggested edits configuration: invalid template name $1 for task type $2",
 	"growthexperiments-homepage-suggestededits-config-invalidcategorytitle": "Invalid suggested edits configuration: invalid category name $1 for task type $2",
 	"growthexperiments-homepage-suggestededits-config-missingmessage": "Invalid suggested edits configuration: missing message $1 for field $2",
-	"growthexperiments-homepage-suggestededits-create-article-additional-message": "To successfully create a new article, {{GENDER:$1|you'll}} need to use many of the skills you can learn through completing some easier tasks. To learn more about how to create a new article, [$2 click here].",
 	"growthexperiments-homepage-suggestededits-error-title": "No suggested edits are available at this time.",
 	"growthexperiments-homepage-suggestededits-error-description": "Please try again later.",
 	"growthexperiments-homepage-suggestededits-difficulty-filter-error": "Select at least one type of edit",
